Fixes video height shift

--- a/app/components/ItemList/style.module.css
+++ b/app/components/ItemList/style.module.css
@@ -29,6 +29,6 @@
   display: block;
   grid-row: 1 / -1;
   grid-column: 1;
-  height: auto;
+  object-fit: cover;
   width: 100%;
 }
